--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     font-family: 'inter', sans-serif;
     box-sizing: border-box;
 }
+*:focus{
+    outline:none;
+}
 body{
     background-color: #ced4da;
 }
